# py-agent-core

./: .gitignore  BACKLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  ORIGINAL_PROJECT_DISCUSSION.md  README.md  SECURITY.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/guide/: installation.md
examples/: README.md  advanced_agent_features.py  agent_swarm.py  background_tool.py  guardrail_streaming.py  hello_agent.py  hierarchical_assistant.py  interactive_chat.py  minimal_coder.py  rhetoric_speaker.py  search_watchdog.py  self_healing_coder.py  structured_streaming.py  utils.py
openspec/changes/add-minimal-example-and-refine-existing-examples/: design.md  proposal.md
openspec/changes/advanced-features-examples/: design.md  proposal.md  tasks.md
openspec/changes/architectural-alignment/: design.md  tasks.md
openspec/changes/openai-endpoint/: design.md  proposal.md  tasks.md
openspec/specs/additional-examples/: spec.md
openspec/specs/context-pipelines/: spec.md
openspec/specs/control-queues/: spec.md
openspec/specs/core-runner/: spec.md
openspec/specs/example-cli-args/: spec.md
openspec/specs/git-community-standards/: spec.md
openspec/specs/llm-backends/: spec.md
openspec/specs/meta/: spec.md
openspec/specs/tool-execution-control/: spec.md
py_agent_core/: __init__.py  agent.py  agent_loop.py  tool.py
py_agent_core/backends/: __init__.py  azure_openai.py  base.py  dummy.py  ollama.py  openai.py
tests/: test_agent.py  test_backend.py  test_examples.py  test_new_agent.py  test_tool.py
(+76 files in other folders)
